--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
 before_install:
   - docker build -t eugeniocal/docker-react -f Dockerfile.dev .
 script:
-  - docker run -e CI=true eugeniocal/docker-react npm run test
+  - docker run eugeniocal/docker-react npm run test -- --coverage
 deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
