--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 sudo: required
 services:
   - docker
+install: travis_wait mvn install
 before_install:
   - docker build -t eugeniocal/docker-react -f Dockerfile.dev .
 script:
   - docker run eugeniocal/docker-react npm run test -- --coverage
-
 deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
