--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,9 @@ sudo: required
 services:
   - docker
 before_install:
-  - travis_wait docker build -t eugeniocal/docker-react -f Dockerfile.dev .
+  - docker build -t eugeniocal/docker-react -f Dockerfile.dev .
 script:
   - docker run eugeniocal/docker-react npm run test -- --coverage
-
 deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
