--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-versione : '3' 
-servizi :
-  web :
-    costruire :
-      contesto : . 
-      dockerfile : Dockerfile 
-    porti :
-      -'80:80' 
+version: '3' 
+services:
+  web:
+    build:
+      context: . 
+      dockerfile: Dockerfile 
+    ports:
+      - "80:80"
