--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ deploy:
   region: "us-east-2"
   app: "docker-react"
   env: "Dockerreact-env"
-  bucket_name: "elasticbeanstalk-us-east-2-417411333436"
+  bucket_name: "elasticbeanstalk-us-east-2-417411333436" 
   bucket_path : "docker-react"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: "$AWS_SECRET_KEY"
+  secret_access_key: $AWS_SECRET_KEY
