--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build -t eugeniocal/docker-react -f Dockerfile .
+  - docker build -t eugeniocal/docker-react -f Dockerfile.dev .
 script:
   - docker run -e CI=true eugeniocal/docker-react npm run test
 deploy:
@@ -10,7 +10,7 @@ deploy:
   region: "us-east-2"
   app: "docker-react"
   env: "Dockerreact-env"
-  bucket_name: "elasticbeanstalk-us-east-2-417411333436" 
+  bucket: "elasticbeanstalk-us-east-2-417411333436" 
   bucket_path : "docker-react"
   on:
     branch: master
